prevents members to grow out of box

--- a/common/common.scss
+++ b/common/common.scss
@@ -25,7 +25,6 @@
 .group-timezones {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-  grid-auto-rows: 150px;
   grid-gap: 0.25em;
   box-sizing: border-box;
 
